--- a/index.html
+++ b/index.html
@@ -393,12 +393,12 @@
                 <li class="tag">HTML</li>
                 <li class="tag">CSS</li>
                 <li class="tag">JavaScript</li>
-                <li class="tag">React</li>
+                
             </ul>
             <ul class="project-tags" title="Technologies used">
-              <li class="tag">Github</li>
-              <li class="tag">Netlify</li>
-              <li class="tag">Vscode</li>
+              <li class="tag">React</li>
+              <li class="tag">Django</li>
+              <li class="tag">Bootstrap</li>
           </ul>
           </div>
           <div class="section-link">
