--- a/index.html
+++ b/index.html
@@ -235,6 +235,52 @@
         <div class="project-container">
           <div class="project">
             <div class="project-image">
+              <img src="/static/images/projects/preview.png" width="720" height="340" alt="Next">
+            </div>
+            <div class="project-content-container">
+              <div class="project-content">
+                <h3 class="project-title">
+                  <a href="https://nextinvest0.netlify.app/" target="_blank" rel="noopener"> Next </a>
+                </h3>
+                <div class="project-description">
+                      <p>Investment platform where users can create and account, make orders, deposit, payouts, update profile details, etc. Users can also view transaction details and send tickets to admin</p>
+                </div>
+                <ul class="project-tags" title="Technologies used">
+                  <li class="tag">React</li>
+                  <li class="tag">Typescript</li>
+                  <li class="tag">SASS</li>
+                </ul>
+                <div class="project-links">
+                  <a href="https://crowdfunding01.netlify.app/" target="_blank" rel="noopener" class="link-btn">visit site</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="project">
+            <div class="project-image">
+              <img src="/static/images/projects/preview2.png" width="720" height="340" alt="Getlink">
+            </div>
+            <div class="project-content-container">
+              <div class="project-content">
+                <h3 class="project-title">
+                  <a href="https://getlink001.netlify.app/" target="_blank" rel="noopener"> Crowdfunding </a>
+                </h3>
+                <div class="project-description">
+                    <p>Hackathon solution for a tech site where users can register for various competitions and also contact support for help.</p>
+                </div>
+                <ul class="project-tags" title="Technologies used">
+                  <li class="tag">JavaScript</li>
+                  <li class="tag">CSS</li>
+                  <li class="tag">HTML</li>
+                </ul>
+                <div class="project-links">
+                  <a href="https://crowdfunding01.netlify.app/" target="_blank" rel="noopener" class="link-btn">visit site</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="project">
+            <div class="project-image">
               <img src="/static/images/projects/desktop-preview.jpg" width="720" height="340" alt="Crowdfunding">
             </div>
             <div class="project-content-container">
