--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                   <li class="tag">SASS</li>
                 </ul>
                 <div class="project-links">
-                  <a href="https://crowdfunding01.netlify.app/" target="_blank" rel="noopener" class="link-btn">visit site</a>
+                  <a href="https://nextinvest0.netlify.app/" target="_blank" rel="noopener" class="link-btn">visit site</a>
                 </div>
               </div>
             </div>
