--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 										<a href="https://next2-0.vercel.app/" target="_blank" rel="noopener"> Next </a>
 									</h3>
 									<div class="project-description">
-										<p>Fullstack Investment platform where users can sign up, then create orders and deposit funds with PayPal and Cryptocurrency, make withdrawals, update profile details and so on. Users can also send complaints or tickets to admin and there's also a reset password feature.</p>
+										<p>Investment platform where users can sign up, then create orders and deposit funds with PayPal and Cryptocurrency, make withdrawals, update profile details and so on. Users can also send complaints or tickets to admin and there's also a reset password feature.</p>
 									</div>
 									<ul class="project-tags" title="Technologies used">
 										<li class="tag">React TS</li>
@@ -231,6 +231,56 @@
 									</ul>
 									<div class="project-links">
 										<a href="https://next2-0.vercel.app/" target="_blank" rel="noopener" class="link-btn">visit site</a>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="project">
+							<div class="project-image">
+								<img src="/static/images/projects/Bayelsaunited.png" width="720" height="340" alt="Next" />
+							</div>
+							<div class="project-content-container">
+								<div class="project-content">
+									<h3 class="project-title">
+										<a href="https://bayelsaunitedfc.vercel.app/" target="_blank" rel="noopener"> BayelsaunitedFC </a>
+									</h3>
+									<div class="project-description">
+										<p>Website for a Sports club. View latest news, upcoming fixtures, buy products etc. With an admin backend for adding news, fixtures, other admins etc.</p>
+									</div>
+									<ul class="project-tags" title="Technologies used">
+										<li class="tag">React TS</li>
+										<li class="tag">MongoDB</li>
+										<li class="tag">Express</li>
+										<li class="tag">Nodejs</li>
+										<li class="tag">SASS</li>
+									</ul>
+									<div class="project-links">
+										<a href="https://bayelsaunitedfc.vercel.app/" target="_blank" rel="noopener" class="link-btn">visit site</a>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="project">
+							<div class="project-image">
+								<img src="/static/images/projects/Subscribed.png" width="720" height="340" alt="Next" />
+							</div>
+							<div class="project-content-container">
+								<div class="project-content">
+									<h3 class="project-title">
+										<a href="https://subscribed.vercel.app/" target="_blank" rel="noopener"> Subscribed </a>
+									</h3>
+									<div class="project-description">
+										<p>Virtual top up website where users can buy airtime, data, cable and electricity bills. Users ca also update their profile, contact admin if there' any complaints etc</p>
+									</div>
+									<ul class="project-tags" title="Technologies used">
+										<li class="tag">React TS</li>
+										<li class="tag">MongoDB</li>
+										<li class="tag">Express</li>
+										<li class="tag">Nodejs</li>
+										<li class="tag">SASS</li>
+									</ul>
+									<div class="project-links">
+										<a href="https://subscribed.vercel.app/" target="_blank" rel="noopener" class="link-btn">visit site</a>
 									</div>
 								</div>
 							</div>
@@ -346,29 +396,6 @@
 									</ul>
 									<div class="project-links">
 										<a href="https://tipscalculator01.netlify.app/" target="_blank" rel="noopener" class="link-btn">visit site</a>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="project">
-							<div class="project-image">
-								<img src="/static/images/projects/active-states.jpg" width="720" height="340" alt="Interactive Card" />
-							</div>
-							<div class="project-content-container">
-								<div class="project-content">
-									<h3 class="project-title">
-										<a href="https://interactive01.netlify.app/" target="_blank" rel="noopener"> Interactive Card </a>
-									</h3>
-									<div class="project-description">
-										<p>Debit card simulator that automatically updates the cardholders name, number, month etc.</p>
-									</div>
-									<ul class="project-tags" title="Technologies used">
-										<li class="tag">JavaScript</li>
-										<li class="tag">CSS</li>
-										<li class="tag">HTML</li>
-									</ul>
-									<div class="project-links">
-										<a href="https://interactive01.netlify.app/" target="_blank" rel="noopener" class="link-btn">visit site</a>
 									</div>
 								</div>
 							</div>
